--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     <meta name="author" content="Inga Maholwana" />
 
     <meta property="og:title" content="Inga Maholwana | Full Stack Software Engineer" />
-    <meta property="og:description" content="Full Stack Software Engineer from South Africa specializing in Ruby, Rails, Python, JavaScript, and React." />
+    <meta property="og:description" content="Full Stack Software Engineer from South Africa specializing in Ruby, Rails, Python, JavaScript, and React web3." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@inga_maholwana" />
+    <meta name="twitter:title" content="Inga Maholwana | Full Stack Software Engineer" />
   </head>
 
   <body>
